site/css/styling-dark.css
body {
  background-color: black;
  margin: 0;
  font-family: sans-serif;
}

#header {
  position: sticky;
  top: 0;
  height: 10%;
  width: 100%;
  background-color: #222222;
  font-family: monospace;
  font-size: 1.12rem;
}

a {
  color: mediumseagreen;
}

a:link {
  text-decoration: none;
}

a:visited {
  color: mediumpurple;
  text-decoration: mediumpurple;
}

a:hover {
  color: lightseagreen;
  text-decoration: underline;
  text-decoration-color: lightseagreen;
}

.nav-link {
  color: white !important;
  text-decoration: none !important;
}

.nav-spacer {
  display: inline;
  color: white;
  width: 1px;
}

.nav-link:hover {
  color: green !important;
  text-decoration: none !important;
}


.projects-image {
  width: 95%;
  padding-bottom: 2rem;
}

/* Always ensure badge sizing as they're not meant to stretch */
.medium-badge {
  width: 88px;
  height: 31px;
}

/* For larger displays - desktop, tablet, etc */
@media only screen and (min-width: 769px) {
  .content-body {
    margin: 2% auto;
    width: 40%;
    text-align: left;
    background-color: #222222;
    color: white;
    padding: 2%;
  }
}

/* For mobile / limited screen width */
@media only screen and (max-width: 768px) {
  .content-body {
    margin: 2% auto;
    width: 85%;
    text-align: left;
    background-color: #222222;
    color: white;
    padding: 2%;
  }
}

